<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/black">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.popularmovies.MovieDetail">

        <TextView
            android:id="@+id/error_message"
            android:padding="4dp"
            android:textColor="@color/yellow"
            android:visibility="gone"
            android:gravity="center"
            android:text="@string/no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/img_error_message"
            android:padding="4dp"
            android:textColor="@color/yellow"
            android:visibility="gone"
            android:gravity="center"
            android:text="@string/no_img_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"/>

        <TextView
            android:id="@+id/movie_title"
            android:textSize="35sp"
            android:padding="4dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/movie_release_date"
            android:padding="4dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/movie_vote_avg"
            android:padding="4dp"
            android:textSize="20sp"
            android:text="@string/vote_average"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/movie_plot"
            android:padding="4dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/reviews_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </LinearLayout>
</ScrollView>